--- a/kubernetes/frontend.yaml
+++ b/kubernetes/frontend.yaml
@@ -18,7 +18,7 @@ spec:
     spec:
       containers:
         - name: frontend
-          image: trainwithshubham/wanderlust-frontend-beta:v2.2
+          image: koteswararao221/wanderlust-frontend-beta:1.0.0
           ports:
             - containerPort: 5173
 ---
