--- a/kubernetes/backend.yaml
+++ b/kubernetes/backend.yaml
@@ -18,7 +18,7 @@ spec:
     spec:
       containers:
         - name: backend
-          image: koteswararao221/wanderlust-backend-beta:latest
+          image: koteswararao221/wanderlust-backend-beta:1.0.1
           ports:
             - containerPort: 8080
 ---
