--- a/kubernetes/frontend.yaml
+++ b/kubernetes/frontend.yaml
@@ -18,7 +18,7 @@ spec:
     spec:
       containers:
         - name: frontend
-          image: koteswararao221/wanderlust-frontend-beta:latest
+          image: koteswararao221/wanderlust-frontend-beta:1.0.1
           ports:
             - containerPort: 5173
 ---
